[tool.poetry]
name = "creative-center"
version = "0.1.0"
description = ""
authors = ["shinaji <tshinaji@eviry.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "0.1.10"
google-api-python-client = "2.118.0"
langchain-community = "0.0.25"
langchainhub = "0.1.15"
openai = "1.13.3"
langchain-openai = "0.0.8"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
